新增创建topic功能 & 写kafka实例